--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
     <title>S-Shop</title>
@@ -89,36 +92,36 @@
                         <i class="fa-solid fa-bars directory__heading-icon"></i>
                         <button class="directory__heading-btn">Danh mục</button>
                     </h3>
-                    <ul class="directory-list">
-                        <li class="directory-item">
+                    <div class="directory-list">
+                        <div class="directory-item-caption">
                             <div class="directory-item-icon">
                                 <i class="fa-solid fa-angle-right directory-item-icon-angle"></i>
                                 <a href="" class="directory-item-link">Tất cả</a>
                             </div>
-                        </li>
-                        <li class="directory-item">
+                        </div>
+                        <div class="directory-item-expanded">
                             <div class="directory-item-icon">
                                 <i class="fa-solid fa-angle-down directory-item-icon-angle"></i>
                                 <a href="" class="directory-item-link">Electrolics</a>
                             </div>
-                        </li>
-                        <li class="directory-item">
+                        </div>
+                        <div class="directory-item-expanded">
                             <div class="directory-item-icon">
                                 <i class="fa-solid fa-angle-down directory-item-icon-angle"></i>
                                 <a href="" class="directory-item-link">Cell Phone & Smartphone</a>
                             </div>
-                        </li>
-                        <li class="directory-item">
+                        </div>
+                        <div class="directory-item-expanded-sub">
                             <div class="directory-item-icon">
                                 <a href="" class="directory-item-link ">Cell Phone A</a>
                             </div>
-                        </li>
-                        <li class="directory-item">
+                        </div>
+                        <div class="directory-item-expanded-sub">
                             <div class="directory-item-icon">
                                 <a href="" class="directory-item-link ">Cell Phone G</a>
                             </div>
-                        </li>
-                        <li class="directory-item">
+                        </div>
+                        <div class="directory-item-menu">
                             <div class="directory-item-icon">
                                 <a href="" class="directory-item-link directory-item-link-a">
                                     <p class="blue-text">Xem Thêm</p>
@@ -127,34 +130,34 @@
                                     </i>
                                 </a>
                             </div>
-                        </li>
-                        <li class="directory-item">
+                        </div>
+                        <div class="directory-item-expanded">
                             <div class="directory-item-icon">
                                 <i class="fa-solid fa-angle-down directory-item-icon-angle"></i>
                                 <a href="" class="directory-item-link">Business&</a>
                             </div>
-                        </li>
-                        <li class="directory-item">
+                        </div>
+                        <div class="directory-item-expanded">
                             <div class="directory-item-icon">
                                 <i class="fa-solid fa-angle-down directory-item-icon-angle"></i>
                                 <a href="" class="directory-item-link">Computer</a>
                             </div>
-                        </li>
-                        <li class="directory-item">
+                        </div>
+                        <div class="directory-item-expanded">
                             <div class="directory-item-icon">
                                 <i class="fa-solid fa-angle-down directory-item-icon-angle"></i>
                                 <a href="" class="directory-item-link">Home</a>
                             </div>
-                        </li>
-                        <li class="directory-item">
+                        </div>
+                        <div class="directory-item-menu">
                             <div class="directory-item-icon">
                                 <a href="" class="directory-item-link  directory-item-link-add">
                                     <p class="blue-text">Mở Rộng</p>
                                 </a>
                             </div>
-                        </li>
+                        </div>
 
-                    </ul>
+                    </div>
                 </div>
             </div>
             <div class="grid_colum_right">
